work in progress

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
 kotlin.code.style=official
+
+springBootVersion=3.0.0
+springSecJwt=1.1.1.RELEASE
+h2Database=2.1.214
+springAuthorizationServer=1.0.0
